добавлена логика создания видов, так же добавлены методы Nice3point.Revit.Toolkit. На данном этапе модель вылетает из за известных причин.

--- a/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
+++ b/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
@@ -14,7 +14,7 @@
     Width="800">
     <Grid>
         <StackPanel>
-            <Button Content="Найти арматуру"
+            <Button Content="Найти арм"
                     Command="{Binding FindFittingsCommand}"
                     Margin="0,0,0,10"
                     Width = "200"/>
