Создаются виды, биндинг строк к видам, при новом поиске удаляются созданные виды, и создаются новые. Плагин переключает вид на безопасный. В случае его отсутсвия создаётся новый.

--- a/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
+++ b/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
@@ -14,10 +14,10 @@
     Width="800">
     <Grid>
         <StackPanel>
-            <Button Content="Найти арм"
+            <Button Content="Найти арматуру над парковочными местами"
                     Command="{Binding FindFittingsCommand}"
                     Margin="0,0,0,10"
-                    Width = "200"/>
+                    Width = "300"/>
             <TextBlock Text = "Найденные элементы:" FontWeight="Bold" Margin="0,10,0,5"/>
             
             <ListBox ItemsSource="{Binding Fittings}"
