--- a/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
+++ b/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
@@ -5,24 +5,39 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:viewModel="clr-namespace:SearchFittingsInParkingSpaces.ViewModels"
+    xmlns:conv="clr-namespace:SearchFittingsInParkingSpaces.Views.Converters"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance viewModel:SearchFittingsInParkingSpacesViewModel}"
-    ResizeMode="NoResize"
+    ResizeMode="CanResizeWithGrip"
     WindowStartupLocation="CenterScreen"
     Title="Поиск арматуры над парковочным местом"
-    Height="450"
-    Width="800">
-    <Grid>
+    Height="{Binding WindowHeight, Mode=TwoWay}"
+    Width="350">
+    
+    <Window.Resources>
+        <conv:BooleanHiddenVisibilityConverter x:Key="BoolToVis" />
+    </Window.Resources>
+    
+    <Grid Margin="10">
         <StackPanel>
             <Button Content="Найти арматуру над парковочными местами"
                     Command="{Binding FindFittingsCommand}"
                     Margin="0,0,0,10"
                     Width = "300"/>
-            <TextBlock Text = "Найденные элементы:" FontWeight="Bold" Margin="0,10,0,5"/>
             
-            <ListBox ItemsSource="{Binding Fittings}"
-                     SelectedItem="{Binding SelectedFitting, Mode=TwoWay}"
-                     Height="300"/>
+            <StackPanel Visibility="{Binding HasRunSearch, Converter={StaticResource BoolToVis}}">
+                
+                <TextBlock Text = "Найденные элементы:" FontWeight="Bold" Margin="0,10,0,5"/>
+                
+                <ListBox ItemsSource="{Binding Fittings}"
+                         SelectedItem="{Binding SelectedFitting, Mode=TwoWay}"
+                         Height="100"/>
+                
+                <Button Content="Экспорт в CSV"
+                        Command="{Binding ExportCsvCommand}"
+                        Width="150"
+                        Margin="0,10,0,0"/>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Window>
