--- a/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
+++ b/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
@@ -8,7 +8,7 @@
     xmlns:conv="clr-namespace:SearchFittingsInParkingSpaces.Views.Converters"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance viewModel:SearchFittingsInParkingSpacesViewModel}"
-    ResizeMode="CanResizeWithGrip"
+    ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     Title="Поиск арматуры над парковочным местом"
     Height="{Binding WindowHeight, Mode=TwoWay}"
@@ -32,6 +32,7 @@
                 <ListBox ItemsSource="{Binding Fittings}"
                          SelectedItem="{Binding SelectedFitting, Mode=TwoWay}"
                          Height="100"/>
+                <TextBlock Text = "Для перехода на вид, нажмите на соответствующую строку" FontWeight="UltraLight" Margin="5,0,0,0" FontSize="10" FontStyle="Italic"/>
                 
                 <Button Content="Экспорт в CSV"
                         Command="{Binding ExportCsvCommand}"
