--- a/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
+++ b/SearchFittingsInParkingSpaces/Views/SearchFittingsInParkingSpacesView.xaml
@@ -30,7 +30,7 @@
                 <TextBlock Text = "Найденные элементы:" FontWeight="Bold" Margin="0,10,0,5"/>
                 
                 <ListBox ItemsSource="{Binding Fittings}"
-                         SelectedItem="{Binding SelectedFitting, Mode=TwoWay}"
+                         SelectedItem="{Binding SelectedResult, Mode=TwoWay}"
                          Height="100"/>
                 <TextBlock Text = "Для перехода на вид, нажмите на соответствующую строку" FontWeight="UltraLight" Margin="5,0,0,0" FontSize="10" FontStyle="Italic"/>
                 
